<?xml version="1.0"?>
<package format="3">
  <name>glove_udp_bridge</name>
  <version>0.0.1</version>
  <description>Receive SenseGlove hand-angle UDP packets and publish ROS2 topics.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>glove_hand_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
